# wilibsp

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FreeWili2 Example Projects.txt  FwDisplayVibe.md  LICENSE  README.md
apps/hello_audio/: CMakeLists.txt  README.md  main.c
apps/hello_cc1101/: CMakeLists.txt  main.c
apps/hello_charger/: CMakeLists.txt  main.c
apps/hello_display/: CMakeLists.txt  README.md  main.c
apps/hello_dvi/: CMakeLists.txt  README.md  main.c
apps/hello_ir/: CMakeLists.txt  README.md  main.c
apps/hello_keyboard/: CMakeLists.txt  main.c
apps/hello_mics/: CMakeLists.txt  README.md  main.c
apps/hello_sensors/: CMakeLists.txt  README.md  main.c
apps/hello_usbdrive/: CMakeLists.txt  README.md  main.c
apps/orca_browser/: CMakeLists.txt  README.md  art_data.c  audio_data.c  echo.gray  logo_a8.raw  logo_data.c  logo_rgba.raw  lv_conf.h  lvgl_port.c  lvgl_port.h  main.c  matriarch.gray  noise.gray  pod.gray  story_data.c  story_data.h
apps/retrochat/: CMakeLists.txt  README.md  audio_glue.c  audio_glue.h  compose.c  compose.h  main.c  protocol.c  protocol.h  ui.c  ui.h
apps/retrochat/modem/: afsk_demod.c  afsk_demod.h  afsk_mod.c  afsk_mod.h  crc16.c  crc16.h  frame.c  frame.h  msgq.c  msgq.h
apps/template/: CMakeLists.txt  README.md
apps/toggleled/: CMakeLists.txt  README.md  main.c
bsp/: CMakeLists.txt  fw2.h
bsp/audio/: audio_capture.c  audio_capture.h  audio_i2s_duplex.c  audio_i2s_duplex.h  codec_nau88c10.c  codec_nau88c10.h  i2s_duplex.pio  tone_gen.c  tone_gen.h  vu_meter.c  vu_meter.h
bsp/boards/: freewili2.h
bsp/display/: dvi_osd.c  dvi_osd.h  font5x7.c  font5x7.h  hstx_dvi.c  hstx_dvi.h  hstx_modes.h  st7796.c  st7796.h
bsp/dsp/: cic.c  cic.h  dcblock.c  dcblock.h
bsp/gfx/: palette.c  palette.h
bsp/input/: ft6336.c  ft6336.h  ft6336_map.c  ft6336_map.h  uartkbd.c  uartkbd.h  uartkbd_parse.c  uartkbd_parse.h
bsp/ir/: db_sort.c  db_sort.h  ir_capture.c  ir_capture.h  ir_capture.pio  ir_decode.c  ir_decode.h  ir_encode.c  ir_encode.h  ir_file.c  ir_file.h  ir_frame.c  ir_frame.h  ir_protocols.c  ir_protocols.h  ir_resolve.c  ir_resolve.h  ir_tx.c  ir_tx.h  ir_tx.pio  ir_tx_pack.c  ir_tx_pack.h  ir_types.h
bsp/keyboard/: fw2kb.c  fw2kb.h  fw2kb_hidmap.c
bsp/leds/: led_color.c  led_color.h  led_ui.c  led_ui.h  ws2812.pio  ws2812_driver.c  ws2812_driver.h
bsp/pdm/: pdm_capture.c  pdm_capture.h  pdm_capture.pio
bsp/platform/: board.c  board.h  diag.h  ioexp.c  ioexp.h  psram.c  psram.h  psram_layout.h  spi_bus.c  spi_bus.h
bsp/radio/: capture_store.c  capture_store.h  cc1101.c  cc1101.h  cc1101_regs.c  cc1101_regs.h  gdo_capture.c  gdo_capture.h  gdo_capture.pio  monitor_engine.c  monitor_engine.h  ook_tx.c  ook_tx.h  scan_engine.c  scan_engine.h
bsp/sensors/: bmi323.c  bmi323.h  bmm350.c  bmm350.h  bmm350_comp.c  bmm350_comp.h  opt4001.c  opt4001.h  sht40.c  sht40.h
bsp/usbhost/: msc_disk.c  usb_core.c  usb_core.h  usb_hcd.c  usb_hcd.h  usb_hub.c  usb_hub.h  usb_msc.c  usb_msc.h  usb_parse.c  usb_parse.h  usb_store.c  usb_store.h
docs/drivers/: audio.md  display.md  dvi.md  ir.md  keyboard.md  leds.md  pdm.md  platform.md  radio.md  sensors.md  touch.md  usbhost.md
docs/hardware/: catalog.md  facts.md  pinmap.md
docs/superpowers/: handoff-2026-07-04.md
docs/superpowers/findings/: 2026-07-04-cc1101-radio-e2e.md  2026-07-04-i2c-sensors-e2e.md  2026-07-04-i2s-audio-e2e.md  2026-07-04-pdm-mics-e2e.md
docs/superpowers/plans/: 2026-07-01-freewili2-bsp.md  2026-07-01-i2s-audio-driver.md  2026-07-04-cc1101-radio-driver.md  2026-07-04-i2c-sensors.md  2026-07-04-pdm-mic-driver.md  2026-07-06-dvi-video-harvest.md  2026-07-06-ir-usbhost-harvest.md  2026-07-09-toggleled.md  2026-07-22-fw2kb-uartkbd.md  2026-07-22-hello-keyboard-dma.md  2026-07-22-uartkbd-charger.md  2026-07-22-uartkbd-dma-ring.md
docs/superpowers/specs/: 2026-07-01-freewili2-bsp-design.md  2026-07-01-i2s-audio-driver-design.md  2026-07-04-cc1101-radio-driver-design.md  2026-07-04-i2c-sensors-design.md  2026-07-04-pdm-mic-driver-design.md  2026-07-06-dvi-video-harvest-design.md  2026-07-09-toggleled-design.md  2026-07-22-fw2kb-uartkbd-design.md  2026-07-22-hello-keyboard-dma-design.md  2026-07-22-uartkbd-charger-design.md  2026-07-22-uartkbd-dma-ring-design.md
libs/examples/: blink.c
libs/include/: onewili_fwgui.h
libs/onewili/: CMakeLists.txt  README.md
libs/onewili/include/: onewili.h  onewili_binary.h  onewili_binary_framing.h  onewili_enums.h  onewili_events.h
libs/onewili/src/: binary_transport.c  onewili_events.c
libs/src/: binary_framing.c  onewili.c  onewili_fwgui.c
skills/freewili2-add-driver/: SKILL.md
skills/freewili2-new-app/: SKILL.md
tests/: CMakeLists.txt  ir_synth.h  test_bmi323.c  test_bmm350_comp.c  test_capture_store.c  test_cc1101_regs.c  test_cic.c  test_db_sort.c  test_dcblock.c  test_dvi_osd.c  test_fw2kb.c  test_fw2kb_hid.c  test_ir_dispatch.c  test_ir_file.c  test_ir_frame.c  test_ir_golden.c  test_ir_kaseikyo.c  test_ir_manchester.c  test_ir_nec.c  test_ir_pd.c  test_ir_resolve.c  test_ir_tx_pack.c  test_led_color.c  test_monitor_engine.c  test_ook_tx.c  test_opt4001.c  test_palette.c  test_rc_afsk_demod.c  test_rc_afsk_loopback.c  test_rc_afsk_mod.c  test_rc_compose.c  test_rc_crc16.c  test_rc_frame.c  test_rc_msgq.c  test_scan_engine.c  test_sht40.c  test_tone_gen.c  test_uartkbd_parse.c  test_util.h  test_vu_meter.c
tools/: fw.py
tools/openocd/: freewili2.cfg
tools/tests/: test_fw.py
