set(LV_BUILD_CONF_PATH "${CMAKE_CURRENT_LIST_DIR}/lv_conf.h" CACHE FILEPATH "LVGL config" FORCE)
set(CONFIG_LV_BUILD_EXAMPLES OFF CACHE BOOL "Build LVGL examples" FORCE)
set(CONFIG_LV_BUILD_DEMOS OFF CACHE BOOL "Build LVGL demos" FORCE)
if(NOT TARGET lvgl)
  add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/../../../subghz/lib/lvgl" "${CMAKE_BINARY_DIR}/lvgl")
endif()
add_executable(orca_browser main.c story_data.c audio_data.c logo_data.c art_data.c lvgl_port.c)
target_include_directories(orca_browser PRIVATE ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(orca_browser freewili2_bsp lvgl)
pico_set_binary_type(orca_browser copy_to_ram)
pico_add_extra_outputs(orca_browser)
